--- a/index.html
+++ b/index.html
@@ -2,196 +2,91 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>🔥 Mi Tap Game</title>
+<title>Tap Game</title>
 
 <style>
 body {
-  background-color: #111;
+  background: #0f172a;
   color: white;
   font-family: Arial;
   text-align: center;
-  padding-top: 50px;
+  margin-top: 50px;
 }
 
-button {
-  font-size: 24px;
-  padding: 20px 40px;
-  border-radius: 12px;
-  border: none;
-  background-color: #4CAF50;
-  color: white;
+#coin {
+  font-size: 100px;
   cursor: pointer;
 }
 
-.info {
+#score {
+  font-size: 40px;
+  margin: 20px;
+}
+
+#energy {
   font-size: 20px;
-  margin: 10px;
+  color: #38bdf8;
 }
 </style>
 
 </head>
 <body>
 
-<h1>🔥 Mi Tap Game</h1>
+<h1>Tap Game</h1>
 
-<div class="info">Puntos: <span id="points">0</span></div>
-<div class="info">Energía: <span id="energy">100</span></div>
-<div class="info">Nivel: <span id="level">1</span></div>
-<div class="info">Poder por tap: <span id="power">1</span></div>
+<div id="coin">🪙</div>
 
-<button onclick="tap()">TAP 👆</button>
+<div id="score">0</div>
 
+<div id="energy">Energy: 100 / 100</div>
 
-<script type="module">
+<script>
 
-// FIREBASE IMPORTS
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+let score = localStorage.getItem("score") 
+  ? parseInt(localStorage.getItem("score")) 
+  : 0;
 
-import {
-  getDatabase,
-  ref,
-  set,
-  get
-} from "https://www.gstatic.com/firebasejs/12.9.0/firebase-database.js";
-
-
-// CONFIG FIREBASE
-const firebaseConfig = {
-  apiKey: "AIzaSyDuLVVLdgaxvXWK1Km4ppXNQjuxWrr6jS0",
-  authDomain: "tap-game-web-92e4e.firebaseapp.com",
-  databaseURL: "https://tap-game-web-92e4e-default-rtdb.firebaseio.com",
-  projectId: "tap-game-web-92e4e",
-  storageBucket: "tap-game-web-92e4e.firebasestorage.app",
-  messagingSenderId: "502296677962",
-  appId: "1:502296677962:web:57e33d2c687ac9b15c20b3"
-};
-
-
-// INICIAR FIREBASE
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
-
-// VARIABLES DEL JUEGO
-window.points = 0;
-window.energy = 100;
-window.level = 1;
-window.power = 1;
+let energy = localStorage.getItem("energy") 
+  ? parseInt(localStorage.getItem("energy")) 
+  : 100;
 
 const maxEnergy = 100;
 
+const scoreDisplay = document.getElementById("score");
+const energyDisplay = document.getElementById("energy");
 
-// ACTUALIZAR PANTALLA
-function updateScreen(){
-
-  document.getElementById("points").innerText = window.points;
-  document.getElementById("energy").innerText = window.energy;
-  document.getElementById("level").innerText = window.level;
-  document.getElementById("power").innerText = window.power;
-
+function updateUI() {
+  scoreDisplay.innerText = score;
+  energyDisplay.innerText = "Energy: " + energy + " / " + maxEnergy;
 }
 
+document.getElementById("coin").onclick = () => {
 
-// SUBIR NIVEL
-function checkLevelUp(){
+  if (energy > 0) {
+    score++;
+    energy--;
 
-  let required = window.level * 50;
+    localStorage.setItem("score", score);
+    localStorage.setItem("energy", energy);
 
-  if(window.points >= required){
-
-    window.level++;
-    window.power++;
-
-    alert("🚀 Subiste al nivel " + window.level);
-
+    updateUI();
   }
 
-}
+};
 
+setInterval(() => {
 
-// TAP
-window.tap = function(){
-
-  if(window.energy <= 0){
-
-    alert("Sin energía");
-    return;
-
+  if (energy < maxEnergy) {
+    energy++;
+    localStorage.setItem("energy", energy);
+    updateUI();
   }
 
-  window.points += window.power;
-  window.energy -= 1;
+}, 1000);
 
-  checkLevelUp();
-
-  guardarDatos();
-
-  updateScreen();
-
-}
-
-
-// REGENERAR ENERGIA
-function regen(){
-
-  if(window.energy < maxEnergy){
-
-    window.energy++;
-
-    updateScreen();
-
-  }
-
-}
-
-setInterval(regen,1000);
-
-
-// GUARDAR EN FIREBASE
-async function guardarDatos(){
-
-  await set(ref(db,"jugador"),{
-
-    points: window.points,
-    energy: window.energy,
-    level: window.level,
-    power: window.power
-
-  });
-
-  console.log("Guardado en Firebase");
-
-}
-
-
-// CARGAR DESDE FIREBASE
-async function cargarDatos(){
-
-  const snapshot = await get(ref(db,"jugador"));
-
-  if(snapshot.exists()){
-
-    const data = snapshot.val();
-
-    window.points = data.points ?? 0;
-    window.energy = data.energy ?? 100;
-    window.level = data.level ?? 1;
-    window.power = data.power ?? 1;
-
-    console.log("Datos cargados");
-
-  }
-
-  updateScreen();
-
-}
-
-
-// INICIAR
-cargarDatos();
+updateUI();
 
 </script>
-
 
 </body>
 </html>
