Add buttons for tap upgrade and auto miner purchase

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@ button {
 <hr>
 
 <h3>Upgrades</h3>
+<button onclick="buyTapUpgrade()">
+Upgrade Tap (+1) Cost: <span id="tapCost">10</span>
+</button>
+
+<br><br>
+
+<button onclick="buyAutoMiner()">
+Buy Auto Miner Cost: <span id="autoCost">50</span>
+</button>
+
+<div>Tap Power: <span id="tapPower">1</span></div>
+
+<div>Auto Miners: <span id="autoMiners">0</span></div>
 
 <button onclick="buyTapUpgrade()">
 Upgrade Tap Power
