--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ Buy Auto Miner
 
 <div id="stats"></div>
 
-<script type="module" src="script.js"></script>
+<script type="module" src="game.js"></script>
+
 
 </body>
 </html>
