--- a/index.html
+++ b/index.html
@@ -1,68 +1,41 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="es">
 <head>
-  <title>Tap Game PRO</title>
-  <style>
-
-    body{
-      background:#0b1730;
-      color:white;
-      font-family:Arial;
-      text-align:center;
-    }
-
-    #tap{
-
-      width:120px;
-      height:120px;
-      border:3px solid white;
-      margin:20px auto;
-      cursor:pointer;
-
-    }
-
-    button{
-
-      padding:10px;
-      margin:10px;
-      font-size:16px;
-
-    }
-
-  </style>
+<meta charset="UTF-8">
+<title>Tap Game PRO</title>
+<style>
+body{
+  background:#0b1730;
+  color:white;
+  font-family:Arial;
+  text-align:center;
+}
+#tapButton{
+  width:120px;
+  height:120px;
+  border:3px solid white;
+  margin:20px auto;
+  cursor:pointer;
+}
+button{
+  padding:10px;
+  margin:10px;
+  font-size:16px;
+  cursor:pointer;
+}
+</style>
 </head>
-
 <body>
 
 <h1>Tap Game PRO</h1>
 
-<div id="tap"></div>
+<div id="tapButton"></div>
 
 <h2 id="score">0</h2>
 
-<div id="level">Level: 1</div>
-
 <div id="energy">Energy: 100</div>
-
-<hr>
-
-<h2>Shop</h2>
-
-<button onclick="upgradeTap()">
-Upgrade Tap Power
-</button>
-
-<button onclick="buyMiner()">
-Buy Auto Miner
-</button>
-
-<div id="stats"></div>
 
 <script type="module" src="game.js"></script>
 
-
 </body>
 </html>
-
-
